NYSD9-663: Search > Advance Legislation Search Alignment Fix

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
@@ -1190,4 +1190,10 @@ a:hover.c-header--btn.c-header--btn__taking_action {
       padding: 25px 9%;
     }
   }
+
+  .c-site-search--container {
+    max-width: 1500px;
+    margin: 0 auto;
+    position: relative;
+  }
 }
